# flameshot

./: .gitignore  CMakeLists.txt  flameshot.pro
src/: main.cpp
src/config/: buttonlistview.cpp  visualseditor.cpp
src/core/: controller.cpp  controller.h
src/tools/: toolfactory.cpp
src/tools/preview/: preview.cpp  preview.h
src/utils/: confighandler.cpp  screenshotsaver.cpp  screenshotsaver.h
src/widgets/capture/: capturebutton.h  capturewidget.cpp  capturewidget.h  colorpicker.cpp  colorpicker.h
src/widgets/preview/: preview_win.cpp  preview_win.h
