cmake_minimum_required(VERSION 3.12)
project(flameshot)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/cli)
include_directories(src/config)
include_directories(src/core)
include_directories(src/third-party/Qt-Color-Widgets/include)
include_directories(src/third-party/Qt-Color-Widgets/src)
include_directories(src/third-party/singleapplication)
include_directories(src/tools)
include_directories(src/tools/arrow)
include_directories(src/tools/blur)
include_directories(src/tools/circle)
include_directories(src/tools/copy)
include_directories(src/tools/exit)
include_directories(src/tools/imgur)
include_directories(src/tools/launcher)
include_directories(src/tools/line)
include_directories(src/tools/marker)
include_directories(src/tools/move)
include_directories(src/tools/pencil)
include_directories(src/tools/pin)
include_directories(src/tools/rectangle)
include_directories(src/tools/redo)
include_directories(src/tools/save)
include_directories(src/tools/selection)
include_directories(src/tools/sizeindicator)
include_directories(src/tools/text)
include_directories(src/tools/undo)
include_directories(src/utils)
include_directories(src/widgets)
include_directories(src/widgets/capture)
include_directories(src/widgets/panel)

add_executable(flameshot
        dbus/make/org.dharkael.Flameshot.service
        dbus/other-path/service-gen.sh
        dbus/package/org.dharkael.Flameshot.service
        dbus/org.dharkael.Flameshot.xml
        dbus/org.freedesktop.Notifications.xml
        debian/source/format
        debian/changelog
        debian/compat
        debian/control
        debian/copyright
        debian/docs
        debian/rules
        docs/appdata/flameshot.appdata.xml
        docs/bash-completion/flameshot
        docs/desktopEntry/package/flameshot.desktop
        docs/dev/package.md
        docs/dev/release.md
        docs/shortcuts-config/flameshot-shortcuts-kde
        img/app/flameshot.ico
        img/app/flameshot.png
        img/app/flameshot.svg
        img/app/flameshotLogoLicense.txt
        img/hicolor/128x128/apps/flameshot.png
        img/hicolor/48x48/apps/flameshot.png
        img/hicolor/scalable/apps/flameshot.svg
        img/material/black/arrow-bottom-left.png
        img/material/black/arrow-bottom-left.svg
        img/material/black/blur.png
        img/material/black/blur.svg
        img/material/black/circle-outline.png
        img/material/black/circle-outline.svg
        img/material/black/close.png
        img/material/black/close.svg
        img/material/black/cloud-upload.png
        img/material/black/cloud-upload.svg
        img/material/black/colorize.png
        img/material/black/colorize.svg
        img/material/black/config.png
        img/material/black/config.svg
        img/material/black/content-copy.png
        img/material/black/content-copy.svg
        img/material/black/content-save.png
        img/material/black/content-save.svg
        img/material/black/cursor-move.png
        img/material/black/cursor-move.svg
        img/material/black/exit-to-app.png
        img/material/black/exit-to-app.svg
        img/material/black/format-text.svg
        img/material/black/format_bold.png
        img/material/black/format_bold.svg
        img/material/black/format_italic.png
        img/material/black/format_italic.svg
        img/material/black/format_strikethrough.png
        img/material/black/format_strikethrough.svg
        img/material/black/format_underlined.png
        img/material/black/format_underlined.svg
        img/material/black/graphics.png
        img/material/black/graphics.svg
        img/material/black/line.png
        img/material/black/line.svg
        img/material/black/marker.png
        img/material/black/marker.svg
        img/material/black/mouse-off.svg
        img/material/black/mouse.svg
        img/material/black/name_edition.png
        img/material/black/name_edition.svg
        img/material/black/open_with.png
        img/material/black/open_with.svg
        img/material/black/pencil.png
        img/material/black/pencil.svg
        img/material/black/pin.png
        img/material/black/pin.svg
        img/material/black/redo-variant.png
        img/material/black/redo-variant.svg
        img/material/black/size_indicator.png
        img/material/black/size_indicator.svg
        img/material/black/square-outline.png
        img/material/black/square-outline.svg
        img/material/black/square.png
        img/material/black/square.svg
        img/material/black/text.png
        img/material/black/text.svg
        img/material/black/undo-variant.png
        img/material/black/undo-variant.svg
        img/material/white/arrow-bottom-left.png
        img/material/white/arrow-bottom-left.svg
        img/material/white/blur.png
        img/material/white/blur.svg
        img/material/white/circle-outline.png
        img/material/white/circle-outline.svg
        img/material/white/close.png
        img/material/white/close.svg
        img/material/white/cloud-upload.png
        img/material/white/cloud-upload.svg
        img/material/white/colorize.png
        img/material/white/colorize.svg
        img/material/white/config.png
        img/material/white/config.svg
        img/material/white/content-copy.png
        img/material/white/content-copy.svg
        img/material/white/content-save.png
        img/material/white/content-save.svg
        img/material/white/cursor-move.png
        img/material/white/cursor-move.svg
        img/material/white/exit-to-app.png
        img/material/white/exit-to-app.svg
        img/material/white/format-text.png
        img/material/white/format-text.svg
        img/material/white/format_bold.png
        img/material/white/format_bold.svg
        img/material/white/format_italic.png
        img/material/white/format_italic.svg
        img/material/white/format_strikethrough.png
        img/material/white/format_strikethrough.svg
        img/material/white/format_underlined.png
        img/material/white/format_underlined.svg
        img/material/white/graphics.png
        img/material/white/graphics.svg
        img/material/white/line.png
        img/material/white/line.svg
        img/material/white/marker.png
        img/material/white/marker.svg
        img/material/white/mouse-off.svg
        img/material/white/mouse.svg
        img/material/white/name_edition.png
        img/material/white/name_edition.svg
        img/material/white/open_with.png
        img/material/white/open_with.svg
        img/material/white/pencil.png
        img/material/white/pencil.svg
        img/material/white/pin.png
        img/material/white/pin.svg
        img/material/white/redo-variant.png
        img/material/white/redo-variant.svg
        img/material/white/size_indicator.png
        img/material/white/size_indicator.svg
        img/material/white/square-outline.png
        img/material/white/square-outline.svg
        img/material/white/square.png
        img/material/white/square.svg
        img/material/white/text.png
        img/material/white/text.svg
        img/material/white/undo-variant.png
        img/material/white/undo-variant.svg
        img/material/LICENSE.txt
        img/material/README.md
        img/preview/animatedUsage.gif
        img/preview/usageStatic.png
        rpm/flameshot.spec
        src/cli/commandargument.cpp
        src/cli/commandargument.h
        src/cli/commandlineparser.cpp
        src/cli/commandlineparser.h
        src/cli/commandoption.cpp
        src/cli/commandoption.h
        src/config/buttonlistview.cpp
        src/config/buttonlistview.h
        src/config/clickablelabel.cpp
        src/config/clickablelabel.h
        src/config/configwindow.cpp
        src/config/configwindow.h
        src/config/extendedslider.cpp
        src/config/extendedslider.h
        src/config/filenameeditor.cpp
        src/config/filenameeditor.h
        src/config/geneneralconf.cpp
        src/config/geneneralconf.h
        src/config/strftimechooserwidget.cpp
        src/config/strftimechooserwidget.h
        src/config/uicoloreditor.cpp
        src/config/uicoloreditor.h
        src/config/visualseditor.cpp
        src/config/visualseditor.h
        src/core/capturerequest.cpp
        src/core/capturerequest.h
        src/core/controller.cpp
        src/core/controller.h
        src/core/flameshotdbusadapter.cpp
        src/core/flameshotdbusadapter.h
        src/core/globalshortcutfilter.cpp
        src/core/globalshortcutfilter.h
        src/third-party/Qt-Color-Widgets/include/color_wheel.hpp
        src/third-party/Qt-Color-Widgets/include/ColorWheel
        src/third-party/Qt-Color-Widgets/src/alphaback.png
        src/third-party/Qt-Color-Widgets/src/color_utils.cpp
        src/third-party/Qt-Color-Widgets/src/color_utils.hpp
        src/third-party/Qt-Color-Widgets/src/color_wheel.cpp
        src/third-party/Qt-Color-Widgets/src/color_widgets.qrc
        src/third-party/Qt-Color-Widgets/color_widgets.pri
        src/third-party/Qt-Color-Widgets/color_widgets.pro
        src/third-party/Qt-Color-Widgets/COPYING
        src/third-party/Qt-Color-Widgets/LICENSE-EXCEPTION
        src/third-party/Qt-Color-Widgets/README.md
        src/third-party/singleapplication/CHANGELOG.md
        src/third-party/singleapplication/LICENSE
        src/third-party/singleapplication/README.md
        src/third-party/singleapplication/singleapplication.cpp
        src/third-party/singleapplication/singleapplication.h
        src/third-party/singleapplication/singleapplication.pri
        src/third-party/singleapplication/singleapplication_p.h
        src/third-party/singleapplication/Windows.md
        src/tools/arrow/arrowtool.cpp
        src/tools/arrow/arrowtool.h
        src/tools/blur/blurtool.cpp
        src/tools/blur/blurtool.h
        src/tools/circle/circletool.cpp
        src/tools/circle/circletool.h
        src/tools/copy/copytool.cpp
        src/tools/copy/copytool.h
        src/tools/exit/exittool.cpp
        src/tools/exit/exittool.h
        src/tools/imgur/imguruploader.cpp
        src/tools/imgur/imguruploader.h
        src/tools/imgur/imguruploadertool.cpp
        src/tools/imgur/imguruploadertool.h
        src/tools/launcher/applaunchertool.cpp
        src/tools/launcher/applaunchertool.h
        src/tools/launcher/applauncherwidget.cpp
        src/tools/launcher/applauncherwidget.h
        src/tools/launcher/launcheritemdelegate.cpp
        src/tools/launcher/launcheritemdelegate.h
        src/tools/launcher/openwithprogram.cpp
        src/tools/launcher/openwithprogram.h
        src/tools/launcher/terminallauncher.cpp
        src/tools/launcher/terminallauncher.h
        src/tools/line/linetool.cpp
        src/tools/line/linetool.h
        src/tools/marker/markertool.cpp
        src/tools/marker/markertool.h
        src/tools/move/movetool.cpp
        src/tools/move/movetool.h
        src/tools/pencil/penciltool.cpp
        src/tools/pencil/penciltool.h
        src/tools/pin/pintool.cpp
        src/tools/pin/pintool.h
        src/tools/pin/pinwidget.cpp
        src/tools/pin/pinwidget.h
        src/tools/rectangle/rectangletool.cpp
        src/tools/rectangle/rectangletool.h
        src/tools/redo/redotool.cpp
        src/tools/redo/redotool.h
        src/tools/save/savetool.cpp
        src/tools/save/savetool.h
        src/tools/selection/selectiontool.cpp
        src/tools/selection/selectiontool.h
        src/tools/sizeindicator/sizeindicatortool.cpp
        src/tools/sizeindicator/sizeindicatortool.h
        src/tools/text/textconfig.cpp
        src/tools/text/textconfig.h
        src/tools/text/texttool.cpp
        src/tools/text/texttool.h
        src/tools/text/textwidget.cpp
        src/tools/text/textwidget.h
        src/tools/undo/undotool.cpp
        src/tools/undo/undotool.h
        src/tools/abstractactiontool.cpp
        src/tools/abstractactiontool.h
        src/tools/abstractpathtool.cpp
        src/tools/abstractpathtool.h
        src/tools/abstracttwopointtool.cpp
        src/tools/abstracttwopointtool.h
        src/tools/capturecontext.cpp
        src/tools/capturecontext.h
        src/tools/capturetool.h
        src/tools/toolfactory.cpp
        src/tools/toolfactory.h
        src/utils/colorutils.cpp
        src/utils/colorutils.h
        src/utils/confighandler.cpp
        src/utils/confighandler.h
        src/utils/dbusutils.cpp
        src/utils/dbusutils.h
        src/utils/desktopfileparse.cpp
        src/utils/desktopfileparse.h
        src/utils/desktopinfo.cpp
        src/utils/desktopinfo.h
        src/utils/filenamehandler.cpp
        src/utils/filenamehandler.h
        src/utils/globalvalues.cpp
        src/utils/globalvalues.h
        src/utils/pathinfo.cpp
        src/utils/pathinfo.h
        src/utils/screengrabber.cpp
        src/utils/screengrabber.h
        src/utils/screenshotsaver.cpp
        src/utils/screenshotsaver.h
        src/utils/systemnotification.cpp
        src/utils/systemnotification.h
        src/utils/waylandutils.cpp
        src/utils/waylandutils.h
        src/widgets/capture/buttonhandler.cpp
        src/widgets/capture/buttonhandler.h
        src/widgets/capture/capturebutton.cpp
        src/widgets/capture/capturebutton.h
        src/widgets/capture/capturewidget.cpp
        src/widgets/capture/capturewidget.h
        src/widgets/capture/colorpicker.cpp
        src/widgets/capture/colorpicker.h
        src/widgets/capture/hovereventfilter.cpp
        src/widgets/capture/hovereventfilter.h
        src/widgets/capture/modificationcommand.cpp
        src/widgets/capture/modificationcommand.h
        src/widgets/capture/notifierbox.cpp
        src/widgets/capture/notifierbox.h
        src/widgets/capture/selectionwidget.cpp
        src/widgets/capture/selectionwidget.h
        src/widgets/panel/sidepanelwidget.cpp
        src/widgets/panel/sidepanelwidget.h
        src/widgets/panel/utilitypanel.cpp
        src/widgets/panel/utilitypanel.h
        src/widgets/imagelabel.cpp
        src/widgets/imagelabel.h
        src/widgets/infowindow.cpp
        src/widgets/infowindow.h
        src/widgets/loadspinner.cpp
        src/widgets/loadspinner.h
        src/widgets/notificationwidget.cpp
        src/widgets/notificationwidget.h
        src/imgur.pri
        src/main.cpp
        translations/Internationalization_ca.qm
        translations/Internationalization_ca.ts
        translations/Internationalization_es.qm
        translations/Internationalization_es.ts
        translations/Internationalization_fr.qm
        translations/Internationalization_fr.ts
        translations/Internationalization_hu.ts
        translations/Internationalization_ja.qm
        translations/Internationalization_ja.ts
        translations/Internationalization_ka.qm
        translations/Internationalization_ka.ts
        translations/Internationalization_pl.qm
        translations/Internationalization_pl.ts
        translations/Internationalization_pt_br.qm
        translations/Internationalization_pt_br.ts
        translations/Internationalization_ru.qm
        translations/Internationalization_ru.ts
        translations/Internationalization_sr.qm
        translations/Internationalization_sr.ts
        translations/Internationalization_tr.qm
        translations/Internationalization_tr.ts
        translations/Internationalization_zh_CN.qm
        translations/Internationalization_zh_CN.ts
        translations/Internationalization_zh_TW.qm
        translations/Internationalization_zh_TW.ts
        flameshot.pro
        README.md)
